--- a/reflection.vcxproj.filters
+++ b/reflection.vcxproj.filters
@@ -23,7 +23,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\reflection.hpp">
+    <ClInclude Include="src\reflection.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
